Set the basic landing page setup

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-
+    <header>
+        <h1>Когнитивные искажения</h1>
+    </header>
+    <main>
+        <section>
+            <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum excepturi dolore quidem ipsa suscipit adipisci sit, atque quod? Maxime nemo vero impedit ullam magnam accusantium laudantium dignissimos iste distinctio fuga!</h3>
+        </section>
+    </main>
+    <footer></footer>
 </body>
 </html>
