Add a video section

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header class="header background">
+    <header class="header background-img">
         <div class="container">
             <h1 class="title-main margin-bottom-185"><span class="orange">Когнитивные<br>искажения<br></span> в программировании</h1>
             <img class="img" src="./img/main.png" alt="main">
@@ -24,11 +24,22 @@
                 </div>
             </div> 
         </div>
-        
     </header>
     <main>
-        <section>
-            
+        <section class="background-white">
+            <div class="container center margin-bottom-200">
+                <h2>Что же это такое,<br><span class="orange">когнитивные искажения?</span></h2>
+                <p class="margin-top-bottom-30">Что такое когнитивные искажения. Petrovna Channel</p>
+                <iframe 
+                    class="video" width="919" height="569" 
+                    src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen
+                ></iframe>
+            </div>
+        </section>
+        <section class="background-primary-dark">
+            <div class="container padding-top-200">
+                <h3>5 когнитивных искажений о существовании которых стоит помнить</h3>
+            </div>
         </section>
     </main>
     <footer>
