--- a/src/index.html
+++ b/src/index.html
@@ -37,8 +37,45 @@
             </div>
         </section>
         <section class="background-primary-dark">
-            <div class="container padding-top-200">
-                <h3>5 когнитивных искажений о существовании которых стоит помнить</h3>
+            <div class="container padding-top-200 navigation">
+                <div class="card card-header">
+                    <h2><span class="orange">5 когнитивных искажений</span><br> <span class="color-white"> о существовании которых стоит помнить</span></h2>
+                </div>
+                <a class="card card-link" href="#">
+                    <div class="card-content">
+                        <div class="card-number">1</div>
+                        <h3>Эффект ИКЕА</h3>
+                        <p>Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
+                    </div>
+                </a>
+                <a class="card card-link" href="#">
+                    <div class="card-content">
+                        <div class="card-number">2</div>
+                        <h3>Преждевременная оптимизация</h3>
+                        <p>Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
+                    </div>
+                </a>
+                <a class="card card-link" href="#">
+                    <div class="card-content">
+                        <div class="card-number">3</div>
+                        <h3>Искажение новизны</h3>
+                        <p>Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
+                    </div>
+                </a>
+                <a class="card card-link" href="#">
+                    <div class="card-content">
+                        <div class="card-number">4</div>
+                        <h3>Гиперболическое обесценивание</h3>
+                        <p>Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
+                    </div>
+                </a>
+                <a class="card card-link" href="#">
+                    <div class="card-content">
+                        <div class="card-number">5</div>
+                        <h3>Ошибка планирования</h3>
+                        <p>Неправильно рассчитывать время необходимое для завершения задачи.</p>
+                    </div>
+                </a>
             </div>
         </section>
     </main>
