Add a effect-ikea section

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header class="header background-img">
+    <header class="overflow-hidden light-section background-img">
         <div class="container">
             <h1 class="title-main margin-bottom-185"><span class="orange">Когнитивные<br>искажения<br></span> в программировании</h1>
             <img class="img" src="./img/main.png" alt="main">
@@ -31,7 +31,7 @@
                 <h2>Что же это такое,<br><span class="orange">когнитивные искажения?</span></h2>
                 <p class="margin-top-bottom-30">Что такое когнитивные искажения. Petrovna Channel</p>
                 <iframe 
-                    class="video" width="919" height="569" 
+                    class="drop-shadow" width="919" height="569" 
                     src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen
                 ></iframe>
             </div>
@@ -45,37 +45,58 @@
                     <div class="card-content">
                         <div class="card-number">1</div>
                         <h3>Эффект ИКЕА</h3>
-                        <p>Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
+                        <p class="card-text">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
                     </div>
                 </a>
                 <a class="card card-link" href="#">
                     <div class="card-content">
                         <div class="card-number">2</div>
                         <h3>Преждевременная оптимизация</h3>
-                        <p>Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
+                        <p class="card-text">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
                     </div>
                 </a>
                 <a class="card card-link" href="#">
                     <div class="card-content">
                         <div class="card-number">3</div>
                         <h3>Искажение новизны</h3>
-                        <p>Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
+                        <p class="card-text">Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
                     </div>
                 </a>
                 <a class="card card-link" href="#">
                     <div class="card-content">
                         <div class="card-number">4</div>
                         <h3>Гиперболическое обесценивание</h3>
-                        <p>Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
+                        <p class="card-text">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
                     </div>
                 </a>
                 <a class="card card-link" href="#">
                     <div class="card-content">
                         <div class="card-number">5</div>
                         <h3>Ошибка планирования</h3>
-                        <p>Неправильно рассчитывать время необходимое для завершения задачи.</p>
+                        <p class="card-text">Неправильно рассчитывать время необходимое для завершения задачи.</p>
                     </div>
                 </a>
+            </div>
+        </section>
+        <section class="background-img light-section">
+            <div class="container">
+                <div class="img-text-container">
+                    <img class="img-content drop-shadow" src="./img/1.png" alt="ikea-effect">
+                    <div class="text">
+                        <div class="text-sub-title color-secondary">Когнитивные искажения</div>
+                        <h2 class="text-title">Эффект ИКЕА</h2>
+                        <p class="text-p">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
+                    </div>
+                </div>
+                <h3 class="title color-white background-brown ">Как проявляется</h3>
+                <div class="column-two">
+                    <div class="column">
+                        <p>Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.</p>
+                    </div>
+                    <div class="column">
+                        <p>Мы склонны переоцнивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового решения, вы понимаете, о чём я говорю.</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
