--- a/src/index.html
+++ b/src/index.html
@@ -99,6 +99,28 @@
                 </div>
             </div>
         </section>
+        <section id="premature-optimization" class="background-img brown-section">
+            <div class="container">
+                <div class="img-text-container">
+                    <div class="text">
+                        <div class="text-sub-title color-white-50">Когнитивные искажения</div>
+                        <h2 class="text-title color-white">Преждевременная оптимизация</h2>
+                        <p class="text-p color-white">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
+                    </div>
+                    <img class="img-content drop-shadow" src="./img/2.png" alt="ikea-effect">
+
+                </div>
+                <h3 class="title color-brown background-white ">Как проявляется</h3>
+                <div class="column-two color-white">
+                    <div class="column">
+                        <p>Если вы добавите аэродинамический спойлер к своему старому автомобилю вместо ремонта мотора, то автомобиль не станет быстрее.</p>
+                    </div>
+                    <div class="column">
+                        <p>Отличный пример: писать максимально подтюненный и высокопроизводительный код для всего лишь экспериментального проекта.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         
