--- a/src/index.html
+++ b/src/index.html
@@ -121,6 +121,27 @@
                 </div>
             </div>
         </section>
+        <section id="distortion-of-novelty" class="background-img light-section">
+            <div class="container">
+                <div class="img-text-container">
+                    <img class="img-content drop-shadow" src="./img/1.png" alt="ikea-effect">
+                    <div class="text">
+                        <div class="text-sub-title color-secondary">Когнитивные искажения</div>
+                        <h2 class="text-title">Искажение новизны</h2>
+                        <p class="text-p">Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
+                    </div>
+                </div>
+                <h3 class="title color-white background-brown ">Как проявляется</h3>
+                <div class="column-two">
+                    <div class="column">
+                        <p>Часто это искажение настигает нас, когда нужно решение проблемы и… о! Мы как раз только что решили подобную проблему! Давайте использовать это же решение, потому что оно сработало, и мы помним как!</p>
+                    </div>
+                    <div class="column">
+                        <p>Вы замечаете, что пользуетесь теми же рабочими методиками раз за разом? Если да, возможно, вы смотрите на разные проблемы под одним и тем же углом.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         
