--- a/src/index.html
+++ b/src/index.html
@@ -142,6 +142,28 @@
                 </div>
             </div>
         </section>
+        <section id="hyperbolic-depreciation" class="background-img brown-section">
+            <div class="container">
+                <div class="img-text-container">
+                    <div class="text">
+                        <div class="text-sub-title color-white-50">Когнитивные искажения</div>
+                        <h2 class="text-title color-white">Гиперболическое обесценивание</h2>
+                        <p class="text-p color-white">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
+                    </div>
+                    <img class="img-content drop-shadow" src="./img/2.png" alt="ikea-effect">
+
+                </div>
+                <h3 class="title color-brown background-white ">Как проявляется</h3>
+                <div class="column-two color-white">
+                    <div class="column">
+                        <p>Вы когда-нибудь откладывали написание теста? Ловили себя на использовании клавиш-стрелок в Vim? Поздравляю, у вас наблюдается гиперболическое обесценивание.</p>
+                    </div>
+                    <div class="column">
+                        <p>Немедленная выгода от использования чего-то быстродоступного значительно смягчает боль, которую нужно перетерпеть, чтобы усвоить правильный синтаксис для перемещения на нужную строчку. Но как только вы поймёте как перемещаться быстрее, выгода в будущем намного выше. В итоге вы сохраните много времени.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         
