--- a/src/index.html
+++ b/src/index.html
@@ -164,6 +164,28 @@
                 </div>
             </div>
         </section>
+        <section id="errors-in-planning" class="background-img light-section">
+            <div class="container">
+                <div class="img-text-container">
+                    <img class="img-content drop-shadow" src="./img/1.png" alt="ikea-effect">
+                    <div class="text">
+                        <div class="text-sub-title color-secondary">Когнитивные искажения</div>
+                        <h2 class="text-title">Ошибка планирования</h2>
+                        <p class="text-p">Неправильно рассчитывать время необходимое для завершения задачи.</p>
+                    </div>
+                </div>
+                <h3 class="title color-white background-brown ">Как проявляется</h3>
+                <div class="column-two">
+                    <div class="column">
+                        <p>Одно из искажений, которое должно признать большинство из нас. И менеджеры проекта, и сами пользователи продукта — все склонны ставить сроки, в которые невозможно закончить запланированное.</p>
+                    </div>
+                    <div class="column">
+                        <p>Это отлично выражается в старом афоризме:</p>
+                        <p class="mt-1em">Первые 90% готового кода отнимают первые 90% времени разработки. Оставшиеся 10% отнимают вторые 90% времени разработки.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         
