--- a/src/index.html
+++ b/src/index.html
@@ -17,67 +17,67 @@
       <img class="img-main" src="./img/main.png" alt="main">
       <div class="column-container">
         <div class="column">
-          <p>Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.</p>
+          <p class="mtb-1em">Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.</p>
         </div>
         <div class="column">
-          <p>Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию.</p>
-          <p>Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.</p>
-          <a class="button button-hover" href="#navigation">Подробнее</a>
+          <p class="mtb-1em">Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию.</p>
+          <p class="mtb-1em">Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.</p>
+          <a class="btn-header btn-primary btn-hover" href="#navigation">Подробнее</a>
         </div>
       </div>
     </div>
   </header>
+
   <main>
-    <section class="background-white">
-      <div class="container center margin-bottom-200">
+    <section class="bg-white">
+      <div class="container center mb-negative-200">
         <h2><span class="color-dark">Что же это такое,</span><br>когнитивные искажения?</h2>
-        <p class="margin-top-bottom-30">Что такое когнитивные искажения. Petrovna Channel</p>
+        <p class="mtb-30">Что такое когнитивные искажения. Petrovna Channel</p>
         <iframe class="drop-shadow" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" allowfullscreen></iframe>
       </div>
     </section>
-    <nav class="background-primary-dark" id="navigation">
-      <div class="container padding-top-200 navigation">
-        <div class="card card-header">
-          <h2>5 когнитивных искажений<br> <span class="color-white"> о существовании которых
+
+    <nav class="bg-primary-dark" id="navigation">
+      <div class="container pt-200 nav">
+        <div class="card bg-primary-dark">
+          <h2 class="fs-52">5 когнитивных искажений<br> <span class="color-white"> о существовании которых
               стоит помнить</span></h2>
         </div>
-        <a class="card card-link" href="#ikea-effect">
-          <div class="card-content">
-            <div class="card-number">1</div>
-            <h3>Эффект ИКЕА</h3>
-            <p class="card-text">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
+        <a class="card card-link bg-light" href="#ikea-effect">
+          <div class="padding-24">
+            <div class="card-number color-primary-dark">1</div>
+            <h3 class="card-title mb-16">Эффект ИКЕА</h3>
+            <p class="card-text color-dark">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
           </div>
         </a>
-        <a class="card card-link" href="#premature-optimization">
-          <div class="card-content">
-            <div class="card-number">2</div>
-            <h3>Преждевременная оптимизация</h3>
-            <p class="card-text">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
+        <a class="card card-link bg-light" href="#premature-optimization">
+          <div class="padding-24">
+            <div class="card-number color-primary-dark">2</div>
+            <h3 class="card-title mb-16">Преждевременная оптимизация</h3>
+            <p class="card-text color-dark">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
           </div>
-        </a>
-        <a class="card card-link" href="#distortion-of-novelty">
-          <div class="card-content">
-            <div class="card-number">3</div>
-            <h3>Искажение новизны</h3>
-            <p class="card-text">Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
+        </a><a class="card card-link bg-light" href="#distortion-of-novelty">
+          <div class="padding-24">
+            <div class="card-number color-primary-dark">3</div>
+            <h3 class="card-title mb-16">Искажение новизны</h3>
+            <p class="card-text color-dark">Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
           </div>
-        </a>
-        <a class="card card-link" href="#hyperbolic-depreciation">
-          <div class="card-content">
-            <div class="card-number">4</div>
-            <h3>Гиперболическое обесценивание</h3>
-            <p class="card-text">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
+        </a><a class="card card-link bg-light" href="#hyperbolic-depreciation">
+          <div class="padding-24">
+            <div class="card-number color-primary-dark">4</div>
+            <h3 class="card-title mb-16">Гиперболическое обесценивание</h3>
+            <p class="card-text color-dark">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
           </div>
-        </a>
-        <a class="card card-link" href="#errors-in-planning">
-          <div class="card-content">
-            <div class="card-number">5</div>
-            <h3>Ошибка планирования</h3>
-            <p class="card-text">Неправильно рассчитывать время необходимое для завершения задачи.</p>
+        </a><a class="card card-link bg-light" href="#errors-in-planning">
+          <div class="padding-24">
+            <div class="card-number color-primary-dark">5</div>
+            <h3 class="card-title mb-16">Ошибка планирования</h3>
+            <p class="card-text color-dark">Неправильно рассчитывать время необходимое для завершения задачи.</p>
           </div>
         </a>
       </div>
     </nav>
+
     <section class="bg-img relative bg-light" id="ikea-effect">
       <div class="container">
         <div class="img-text-container">
@@ -99,6 +99,7 @@
         </div>
       </div>
     </section>
+
     <section class="bg-img relative bg-brown" id="premature-optimization">
       <div class="container">
         <div class="img-text-container">
@@ -109,7 +110,7 @@
           </div>
           <img class="img-content drop-shadow" src="./img/2.png" alt="ikea-effect">
         </div>
-        <h3 class="title color-brown background-white ">Как проявляется</h3>
+        <h3 class="title color-brown bg-white ">Как проявляется</h3>
         <div class="column-container color-white">
           <div class="column">
             <p>Если вы добавите аэродинамический спойлер к своему старому автомобилю вместо ремонта мотора, то автомобиль не станет быстрее.</p>
@@ -118,17 +119,9 @@
             <p>Отличный пример: писать максимально подтюненный и высокопроизводительный код для всего лишь экспериментального проекта.</p>
           </div>
         </div>
-        <div style="margin-top: 30px; color: white;">
-          <h2>Random Content</h2>
-        
-          <ul>
-            <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro, ipsum earum incidunt assumenda dolore hic quos pariatur nulla voluptatem harum reprehenderit quas distinctio praesentium repellendus iusto rerum sapiente? Repudiandae, eos!</li>
-          </ul>
-        
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro, ipsum earum incidunt assumenda dolore hic quos pariatur nulla voluptatem harum reprehenderit quas distinctio praesentium repellendus iusto rerum sapiente? Repudiandae, eos!</p>
-        </div>
       </div>
     </section>
+
     <section class="bg-img relative bg-light" id="distortion-of-novelty">
       <div class="container">
         <div class="img-text-container">
@@ -150,6 +143,7 @@
         </div>
       </div>
     </section>
+
     <section class="bg-img relative bg-brown" id="hyperbolic-depreciation">
       <div class="container">
         <div class="img-text-container">
@@ -160,7 +154,7 @@
           </div>
           <img class="img-content drop-shadow" src="./img/2.png" alt="ikea-effect">
         </div>
-        <h3 class="title color-brown background-white ">Как проявляется</h3>
+        <h3 class="title color-brown bg-white ">Как проявляется</h3>
         <div class="column-container color-white">
           <div class="column">
             <p>Вы когда-нибудь откладывали написание теста? Ловили себя на использовании клавиш-стрелок в Vim? Поздравляю, у вас наблюдается гиперболическое обесценивание.</p>
@@ -171,6 +165,7 @@
         </div>
       </div>
     </section>
+
     <section class="bg-img relative bg-light" id="errors-in-planning">
       <div class="container">
         <div class="img-text-container">
@@ -194,9 +189,10 @@
       </div>
     </section>
   </main>
-  <footer class="background-white">
+  
+  <footer class="bg-white">
     <div class="container">
-      <div class="f-container background-primary-dark color-white">
+      <div class="f-container bg-primary-dark color-white">
         <h3 class="col mt-55 mb-55 ml-55 color-white">Хотите узнать больше?<br>Подпишитесь на обновления</h3>
         <div class="container-form col mr-55">
           <form  class="form-email mt-38" action="#" method="get">
@@ -204,7 +200,7 @@
               <label for="email" class="name-input">Электронная почта</label>
               <div class="box">
                 <input class="input-email" id="email" type="text" name="email" placeholder="Ваша электронная почта">
-                <button class="submit-email button-hover" type="submit"></button>
+                <button class="btn-footer btn-primary btn-hover" type="submit"></button>
               </div>
             </div>
           </form>
