--- a/src/index.html
+++ b/src/index.html
@@ -80,15 +80,15 @@
 
     <section class="bg-img relative bg-light" id="ikea-effect">
       <div class="container">
-        <div class="img-text-container">
-          <img class="img-content drop-shadow" src="./img/1.png" alt="ikea-effect">
-          <div class="text">
-            <div class="text-sub-title color-secondary">Когнитивные искажения</div>
-            <h2 class="text-title color-dark">Эффект ИКЕА</h2>
-            <p class="text-p">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
+        <div class="description">
+          <img class="drop-shadow" src="./img/1.png" alt="ikea-effect">
+          <div>
+            <p class="description-subtitle color-dark-50">Когнитивные искажения</p>
+            <h2 class="color-dark">Эффект ИКЕА</h2>
+            <p class="description-paragraph mt-30">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
           </div>
         </div>
-        <h3 class="title color-white background-brown ">Как проявляется</h3>
+        <h3 class="title-structure title-decoration color-white bg-brown ">Как проявляется</h3>
         <div class="column-container">
           <div class="column">
             <p>Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.</p>
@@ -102,15 +102,15 @@
 
     <section class="bg-img relative bg-brown" id="premature-optimization">
       <div class="container">
-        <div class="img-text-container">
-          <div class="text">
-            <div class="text-sub-title color-white-50">Когнитивные искажения</div>
-            <h2 class="text-title color-white">Преждевременная оптимизация</h2>
-            <p class="text-p color-white">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
+        <div class="description">
+          <div>
+            <p class="description-subtitle color-white-50">Когнитивные искажения</p>
+            <h2 class="color-white">Преждевременная оптимизация</h2>
+            <p class="description-paragraph color-white mt-30">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
           </div>
-          <img class="img-content drop-shadow" src="./img/2.png" alt="ikea-effect">
+          <img class="drop-shadow" src="./img/2.png" alt="premature-optimization">
         </div>
-        <h3 class="title color-brown bg-white ">Как проявляется</h3>
+        <h3 class="title-structure title-decoration color-brown bg-white ">Как проявляется</h3>
         <div class="column-container color-white">
           <div class="column">
             <p>Если вы добавите аэродинамический спойлер к своему старому автомобилю вместо ремонта мотора, то автомобиль не станет быстрее.</p>
@@ -122,17 +122,17 @@
       </div>
     </section>
 
-    <section class="bg-img relative bg-light" id="distortion-of-novelty">
+    <section class="bg-img relative bg-light" id="distortion-of-novelt">
       <div class="container">
-        <div class="img-text-container">
-          <img class="img-content drop-shadow" src="./img/1.png" alt="ikea-effect">
-          <div class="text">
-            <div class="text-sub-title color-secondary">Когнитивные искажения</div>
-            <h2 class="text-title color-dark">Искажение новизны</h2>
-            <p class="text-p">Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
+        <div class="description">
+          <img class="drop-shadow" src="./img/3.png" alt="distortion-of-novelt">
+          <div>
+            <p class="description-subtitle color-dark-50">Когнитивные искажения</p>
+            <h2 class="color-dark">Искажение новизны</h2>
+            <p class="description-paragraph mt-30">Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
           </div>
         </div>
-        <h3 class="title color-white background-brown ">Как проявляется</h3>
+        <h3 class="title-structure title-decoration color-white bg-brown ">Как проявляется</h3>
         <div class="column-container">
           <div class="column">
             <p>Часто это искажение настигает нас, когда нужно решение проблемы и… о! Мы как раз только что решили подобную проблему! Давайте использовать это же решение, потому что оно сработало, и мы помним как!</p>
@@ -146,15 +146,15 @@
 
     <section class="bg-img relative bg-brown" id="hyperbolic-depreciation">
       <div class="container">
-        <div class="img-text-container">
-          <div class="text">
-            <div class="text-sub-title color-white-50">Когнитивные искажения</div>
-            <h2 class="text-title color-white">Гиперболическое обесценивание</h2>
-            <p class="text-p color-white">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
+        <div class="description">
+          <div>
+            <p class="description-subtitle color-white-50">Когнитивные искажения</p>
+            <h2 class="color-white">Гиперболическое обесценивание</h2>
+            <p class="description-paragraph color-white mt-30">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
           </div>
-          <img class="img-content drop-shadow" src="./img/2.png" alt="ikea-effect">
+          <img class="drop-shadow" src="./img/4.png" alt="hyperbolic-depreciation">
         </div>
-        <h3 class="title color-brown bg-white ">Как проявляется</h3>
+        <h3 class="title-structure title-decoration color-brown bg-white ">Как проявляется</h3>
         <div class="column-container color-white">
           <div class="column">
             <p>Вы когда-нибудь откладывали написание теста? Ловили себя на использовании клавиш-стрелок в Vim? Поздравляю, у вас наблюдается гиперболическое обесценивание.</p>
@@ -165,18 +165,18 @@
         </div>
       </div>
     </section>
-
+  
     <section class="bg-img relative bg-light" id="errors-in-planning">
       <div class="container">
-        <div class="img-text-container">
-          <img class="img-content drop-shadow" src="./img/1.png" alt="ikea-effect">
-          <div class="text">
-            <div class="text-sub-title color-secondary">Когнитивные искажения</div>
-            <h2 class="text-title color-dark">Ошибка планирования</h2>
-            <p class="text-p">Неправильно рассчитывать время необходимое для завершения задачи.</p>
+        <div class="description">
+          <img class="drop-shadow" src="./img/5.png" alt="errors-in-planning">
+          <div>
+            <p class="description-subtitle color-dark-50">Когнитивные искажения</p>
+            <h2 class="color-dark">Ошибка планирования</h2>
+            <p class="description-paragraph mt-30">Неправильно рассчитывать время необходимое для завершения задачи.</p>
           </div>
         </div>
-        <h3 class="title color-white background-brown ">Как проявляется</h3>
+        <h3 class="title-structure title-decoration color-white bg-brown ">Как проявляется</h3>
         <div class="column-container">
           <div class="column">
             <p>Одно из искажений, которое должно признать большинство из нас. И менеджеры проекта, и сами пользователи продукта — все склонны ставить сроки, в которые невозможно закончить запланированное.</p>
@@ -189,16 +189,17 @@
       </div>
     </section>
   </main>
-  
+
   <footer class="bg-white">
     <div class="container">
-      <div class="f-container bg-primary-dark color-white">
-        <h3 class="col mt-55 mb-55 ml-55 color-white">Хотите узнать больше?<br>Подпишитесь на обновления</h3>
-        <div class="container-form col mr-55">
-          <form  class="form-email mt-38" action="#" method="get">
-            <div class="container-input">
+
+      <div class="subscription-block bg-primary-dark color-white">
+        <h3 class="column-footer m-55 color-white">Хотите узнать больше?<br>Подпишитесь на обновления</h3>
+        <div class="column-footer mr-55">
+          <form  class="mt-38" action="#" method="get">
+            <div>
               <label for="email" class="name-input">Электронная почта</label>
-              <div class="box">
+              <div class="container-input-btn mt-9">
                 <input class="input-email" id="email" type="text" name="email" placeholder="Ваша электронная почта">
                 <button class="btn-footer btn-primary btn-hover" type="submit"></button>
               </div>
@@ -207,11 +208,12 @@
           <div class="agreement ">Подписываясь, вы принимаете <a href="#" class="agreement-link color-white">правила сервиса</a></div>
         </div>
       </div>
-      <div class="contact-information">
+      <div class="contact-information mt-60">
         <div class="mb-16">© 2021 Алексей Зубков</div>
         <div class="mb-16">По материалам статьи <a class="link" href="#">Yash Ranadive Cognitive Biases in Programming</a></div>
         <a class="link" href="#">Курсы программирования Hexlet</a>
       </div>
+      
     </div>
   </footer>
 </body>
