--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,8 @@
             <h3 class="card-title mb-16">Преждевременная оптимизация</h3>
             <p class="card-text color-dark">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
           </div>
-        </a><a class="card card-link bg-light" href="#distortion-of-novelty">
+        </a>
+        <a class="card card-link bg-light" href="#distortion-of-novelty">
           <div class="padding-24">
             <div class="card-number color-primary-dark">3</div>
             <h3 class="card-title mb-16">Искажение новизны</h3>
@@ -122,10 +123,10 @@
       </div>
     </section>
 
-    <section class="bg-img relative bg-light" id="distortion-of-novelt">
+    <section class="bg-img relative bg-light" id="distortion-of-novelty">
       <div class="container">
         <div class="description">
-          <img class="drop-shadow" src="./img/3.png" alt="distortion-of-novelt">
+          <img class="drop-shadow" src="./img/3.png" alt="distortion-of-novelty">
           <div>
             <p class="description-subtitle color-dark-50">Когнитивные искажения</p>
             <h2 class="color-dark">Искажение новизны</h2>
